# lbfs

./: AUTHORS  Makefile.am  TODO  acinclude.m4  configure.in  setup
etc/: nfs.patch.fbsd
liblbfs/: .cvsignore  Makefile.am  axprt_compress.C  axprt_compress.h  chunk.h  chunking.C  chunking.h  fingerprint.C  fingerprint.h  lbfs.h  lbfs_prot.x  lbfsdb.C  lbfsdb.h  lbfsxattr.C  rabinpoly.C  rabinpoly.h  test_compress.C
sfslbcd/: Makefile.am  TODO  aiodtest.C  attrcache.C  attrcache.h  lrucache.h  notes  ranges.C  ranges.h  read.C  server.C  sfslbcd.C  sfslbcd.h  write.C
sfslbcd-xfs/: .cvsignore  Makefile.am  cache.C  cache.h  cdtest.C  fh_map.C  fh_map.h  helper.C  kernel.C  kernel.h  messages.C  messages.h  pioctl.C  pioctl.h  server.C  sfslbcd.C  sfslbcd.h  xfs-nfs.C  xfs-nfs.h  xfs-sfs.C  xfs-sfs.h  xfs.C  xfs.h
sfslbsd/: .cvsignore  Makefile.am  cfh.C  chunk.C  client.C  dbif.C  dbtest.C  fhtrans.C  filesrv.C  getfh3.C  lbfs.C  lbfs.h  lbfsclient.C  lbfsusrv.C  lbfsusrv.h  lease.C  mkdb.C  mkdb2.C  sfslbsd.C  sfslbsd.h  sfsrwsd.C  sfsrwsd.h
sfszrwsd/: Makefile.am  client.C  fhtrans.C  filesrv.C  lease.C  sfsrwsd.C  sfsrwsd.h
