dnl $Id$
dnl
dnl Process this file with autoconf to produce a configure script.
dnl

AC_INIT(config.h.in)
AM_INIT_AUTOMAKE(lbfs, 0.0)
AM_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
SFS_WFLAGS
AC_PROG_INSTALL
AC_PROG_LN_S
dnl AC_PROG_RANLIB

AM_DISABLE_SHARED
AM_PROG_LIBTOOL

SFS_SFS

test ! "${with_db3+set}" && with_db3=yes
SFS_DB3

test ! "${with_zlib+set}" && with_zlib=yes
SFS_ZLIB

SFS_DEV_RANDOM

AC_SUBST(LIBLBFS)
LIBLBFS='$(top_builddir)/liblbfs/liblbfs.la'

CPPFLAGS="$CPPFLAGS"' -I$(top_srcdir)/liblbfs -I$(top_builddir)/liblbfs'
LDEPS='$(LIBLBFS) '"$LDDEPS"
LDADD='$(LIBLBFS) $(LIBZ) $(DB3_LIB) '"$LDADD"

SFS_CFLAGS

ETAGS_ARGS='-C /dev/null'
AC_SUBST(ETAGS_ARGS)

AC_OUTPUT(liblbfs/Makefile sfslbcd/Makefile sfslbcd2/Makefile sfslbsd/Makefile Makefile)
